Bug fixingAPPDEV-6370:Sep R1 tickets of focus indicator not visible and does not move properly between the controls.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@71517 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/freshdirect.css
+++ b/projects/Media/docroot/assets/css/common/freshdirect.css
@@ -7,11 +7,14 @@ body[developer] *:focus {
 }
 /* exceptions for focus */
 
-div#skip_to_content,.locabar-tab-fdx-cont,body:focus,html:focus,div:focus,*:active,a.accessibleOutlineFF:focus,cssbutton:focus,tr:focus,td:focus,fieldset:focus{
+div#skip_to_content,.locabar-tab-fdx-cont,body:focus,html:focus,div:focus,*:active,a.accessibleOutlineFF:focus,cssbutton:focus,tr:focus,td:focus,fieldset:focus,.tabbed-carousel .tabs li:focus,#quickshop .qs-tabs a:focus,a.portrait-item-header-name:focus{
 	outline:none;
 }
 .portrait-item-header-name{
 	display:block;
+}
+a.portrait-item-header-name:focus{
+	text-decoration:underline !important;
 }
 /* disable ipad highlight */
 * {
